# python-tictactoe

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  test.py
.github/workflows/: build.yml  code-cov.yml  mypy.yml  tests.yml
test_tictactoe/: test_egtb.py  test_init.py
tictactoe/: __init__.py  egtb.py
