[metadata]
name = python-tictactoe
version = attr: tictactoe.__version__
author = AttackingOrDefending
description = A tic-tac-toe library that supports different sizes and dimensions and how many marks in a row to win
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tic-tac-toe, tictactoe, game
url = https://github.com/AttackingOrDefending/python-tictactoe
project_urls =
    Bug Tracker = https://github.com/AttackingOrDefending/python-tictactoe/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages =
    tictactoe
python_requires = >=3.6
install_requires =
    numpy==1.22.3

[options.package_data]
tictactoe = py.typed
